tests/it/wire/snapshots/it__wire__gemini__a_blocked_prompt_is_an_error_not_an_empty_answer.snap
---
source: tests/it/wire/gemini.rs
expression: rendered
---
{
  "kind": "content_filter",
  "message": "provider gemini blocked the prompt under its content policy (block reason SAFETY)",
  "provider": "gemini",
  "provider_code": "SAFETY",
  "retry": {
    "type": "never"
  },
  "raw_data": {
    "promptFeedback": {
      "blockReason": "SAFETY"
    }
  }
}
