tests/it/wire/snapshots/it__wire__gemini__a_spent_quota_is_not_a_rate_limit.snap
---
source: tests/it/wire/gemini.rs
expression: rendered
---
{
  "kind": "quota_exceeded",
  "message": "provider gemini You exceeded your current quota. Please check your plan and billing details.",
  "provider": "gemini",
  "provider_code": "RESOURCE_EXHAUSTED",
  "raw_data": {
    "error": {
      "code": 429,
      "message": "You exceeded your current quota. Please check your plan and billing details.",
      "status": "RESOURCE_EXHAUSTED"
    }
  },
  "retry": {
    "type": "never"
  },
  "status": 429
}
