tests/it/wire/snapshots/it__wire__gemini__a_tool_result_with_media_flattens_to_text_and_warns.snap
---
source: tests/it/wire/gemini.rs
expression: rendered
---
{
  "method": "POST",
  "path": "/v1beta/models/gemini-2.5-pro-002:generateContent",
  "headers": [
    [
      "accept",
      "*/*"
    ],
    [
      "content-length",
      "593"
    ],
    [
      "content-type",
      "application/json"
    ],
    [
      "host",
      "[host]"
    ],
    [
      "user-agent",
      "[user-agent]"
    ],
    [
      "x-goog-api-key",
      "[redacted]"
    ]
  ],
  "body": {
    "contents": [
      {
        "role": "user",
        "parts": [
          {
            "text": "What does the chart show?"
          }
        ]
      },
      {
        "role": "model",
        "parts": [
          {
            "functionCall": {
              "id": "call_chart",
              "name": "read_chart",
              "args": {}
            }
          }
        ]
      },
      {
        "role": "user",
        "parts": [
          {
            "functionResponse": {
              "id": "call_chart",
              "name": "read_chart",
              "response": {
                "output": "Revenue by quarter."
              }
            }
          }
        ]
      }
    ],
    "generationConfig": {
      "maxOutputTokens": 128
    },
    "tools": [
      {
        "functionDeclarations": [
          {
            "name": "read_chart",
            "description": "Reads a chart image",
            "parametersJsonSchema": {
              "type": "object",
              "properties": {}
            }
          }
        ]
      }
    ],
    "safetySettings": [
      {
        "category": "HARM_CATEGORY_DANGEROUS_CONTENT",
        "threshold": "BLOCK_ONLY_HIGH"
      }
    ]
  }
}
