tests/it/wire/snapshots/it__wire__gemini__audio_request-2.snap
---
source: tests/it/wire/gemini.rs
expression: rendered
---
{
  "content": [
    {
      "text": "Hello there.",
      "type": "text"
    }
  ],
  "finish_reason": "stop",
  "id": "resp-gemini-1",
  "model": {
    "model": "gemini-3.1-pro",
    "provider": "gemini"
  },
  "raw": {
    "candidates": [
      {
        "content": {
          "parts": [
            {
              "text": "Hello there."
            }
          ],
          "role": "model"
        },
        "finishReason": "STOP",
        "index": 0
      }
    ],
    "modelVersion": "gemini-3.1-pro-002",
    "responseId": "resp-gemini-1",
    "usageMetadata": {
      "candidatesTokenCount": 5,
      "promptTokenCount": 11,
      "totalTokenCount": 16
    }
  },
  "usage": {
    "cache_read": 0,
    "cache_write": 0,
    "input": 11,
    "output": 5,
    "reasoning": 0
  }
}
