tests/it/wire/snapshots/it__wire__gemini__count_input_tokens_wraps_the_whole_generate_body.snap
---
source: tests/it/wire/gemini.rs
expression: rendered
---
{
  "method": "POST",
  "path": "/v1beta/models/gemini-2.5-pro-002:countTokens",
  "headers": [
    [
      "accept",
      "*/*"
    ],
    [
      "content-length",
      "745"
    ],
    [
      "content-type",
      "application/json"
    ],
    [
      "host",
      "[host]"
    ],
    [
      "user-agent",
      "[user-agent]"
    ],
    [
      "x-goog-api-key",
      "[redacted]"
    ]
  ],
  "body": {
    "generateContentRequest": {
      "systemInstruction": {
        "parts": [
          {
            "text": "Use the tools when they help."
          }
        ]
      },
      "contents": [
        {
          "role": "user",
          "parts": [
            {
              "text": "What is the weather in Paris?"
            }
          ]
        }
      ],
      "generationConfig": {
        "maxOutputTokens": 128
      },
      "tools": [
        {
          "functionDeclarations": [
            {
              "name": "get_weather",
              "description": "Reads the current weather for a city",
              "parametersJsonSchema": {
                "type": "object",
                "properties": {
                  "city": {
                    "type": "string"
                  }
                },
                "required": [
                  "city"
                ]
              }
            },
            {
              "name": "get_time",
              "description": "Reads the current time in a time zone",
              "parametersJsonSchema": {
                "type": "object",
                "properties": {
                  "zone": {
                    "type": "string"
                  }
                },
                "required": [
                  "zone"
                ]
              }
            }
          ]
        }
      ],
      "safetySettings": [
        {
          "category": "HARM_CATEGORY_DANGEROUS_CONTENT",
          "threshold": "BLOCK_ONLY_HIGH"
        }
      ],
      "model": "models/gemini-2.5-pro-002"
    }
  }
}
