tests/it/wire/snapshots/it__wire__gemini__inline_attachments_request.snap
---
source: tests/it/wire/gemini.rs
expression: rendered
---
{
  "body": {
    "contents": [
      {
        "parts": [
          {
            "text": "Describe both attachments."
          },
          {
            "inlineData": {
              "data": "aW1hZ2UtYnl0ZXM=",
              "mimeType": "image/png"
            }
          },
          {
            "inlineData": {
              "data": "cGRmLWJ5dGVz",
              "mimeType": "application/pdf"
            }
          }
        ],
        "role": "user"
      }
    ],
    "generationConfig": {
      "maxOutputTokens": 128
    },
    "safetySettings": [
      {
        "category": "HARM_CATEGORY_DANGEROUS_CONTENT",
        "threshold": "BLOCK_ONLY_HIGH"
      }
    ]
  },
  "headers": [
    [
      "accept",
      "*/*"
    ],
    [
      "content-length",
      "351"
    ],
    [
      "content-type",
      "application/json"
    ],
    [
      "host",
      "[host]"
    ],
    [
      "user-agent",
      "[user-agent]"
    ],
    [
      "x-goog-api-key",
      "[redacted]"
    ]
  ],
  "method": "POST",
  "path": "/v1beta/models/gemini-2.5-pro-002:generateContent"
}
